# libhttp

./: .gitignore  README.md  example.sh  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  http.cpp  mbedtls_config.h
app/src/main/java/binhmod/libhttp/: MainActivity.java
app/src/main/res/values/: strings.xml
